# xpc_multiplexer

./: .gitmodules  meson.build
include/: epoll_app.h  xpc_msg_queue.h  xpc_relay.h  xpc_utils.h
src/: epoll_app.c  main.c  xpc_msg_queue.c  xpc_relay.c  xpc_utils.c
tests/: test_msg_queue.c  test_relay.c
